force-app/main/default/objects/Activity/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ocorrência</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Coloque uma ocorrência relacionada ao cliente e safra</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Case.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Crop__c</field>
            <operation>equals</operation>
            <valueField>Case.Crop__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>