force-app/main/default/objects/Activity/fields/Checkin__c.field-meta.xml
<CustomField>
    <fullName>Checkin__c</fullName>
    <label>Check In</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>