force-app/main/default/objects/Activity/fields/CheckinDate__c.field-meta.xml
<CustomField>
    <fullName>CheckinDate__c</fullName>
    <label>Data do Check In</label>
    <type>DateTime</type>
</CustomField>