force-app/main/default/objects/Activity/fields/CheckInDone__c.field-meta.xml
<CustomField>
    <fullName>CheckInDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check In realizado</label>
    <type>Checkbox</type>
</CustomField>