force-app/main/default/objects/Activity/fields/CompletedEvent__c.field-meta.xml
<CustomField>
    <fullName>CompletedEvent__c</fullName>
    <formula>NOT ( ISBLANK (  VisitOpinion__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visita Concluida</label>
    <type>Checkbox</type>
</CustomField>