force-app/main/default/objects/Activity/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Crops</relationshipLabel>
    <relationshipName>Crops</relationshipName>
    <type>Lookup</type>
</CustomField>