force-app/main/default/objects/Activity/fields/EventRelated__c.field-meta.xml
<CustomField>
    <fullName>EventRelated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo vincula o evento atual com o evento relacionado, o motivo deste objeto existir é porque existem objetos que precisam estar relacionados a visita, porém por ser um objeto standard, ele não permite que seja indicado como relacionamento de pesquisa em outros objetos.</description>
    <label>Evento Relacionado</label>
    <referenceTo>EventRelated__c</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>