force-app/main/default/objects/Activity/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Visita</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EventTypes__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EventTypes__c</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>