force-app/main/default/objects/Activity/fields/GeolocationPermission__c.field-meta.xml
<CustomField>
    <fullName>GeolocationPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitiu acessar localização?</label>
    <type>Checkbox</type>
</CustomField>