force-app/main/default/objects/Activity/fields/RelatedUser__c.field-meta.xml
<CustomField>
    <fullName>RelatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso este campo esteja preenchido, será gerado um evento clone do evento atual e será atribuído ao usuário selecionado.</description>
    <inlineHelpText>Caso este campo esteja preenchido, será gerado um evento clone do evento atual e será atribuído ao usuário selecionado.</inlineHelpText>
    <label>Usuário Adicional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>