force-app/main/default/objects/Activity/fields/ValidaErroExcluir__c.field-meta.xml
<CustomField>
    <fullName>ValidaErroExcluir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para ser usado no flow de não permissão de exclusão caso um registro de Visita esteja com checkin realizado.</description>
    <label>Valida Erro Excluir</label>
    <type>Checkbox</type>
</CustomField>