force-app/main/default/objects/Activity/fields/Validavisita__c.field-meta.xml
<CustomField>
    <fullName>Validavisita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valida Parecer Visita</label>
    <type>Checkbox</type>
</CustomField>