force-app/main/default/objects/Activity/fields/VisitOpinion__c.field-meta.xml
<CustomField>
    <fullName>VisitOpinion__c</fullName>
    <label>Parecer da Visita</label>
    <type>TextArea</type>
</CustomField>